--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,6 @@ framework = stm32cube
 build_flags =
     -Idriverlib
     -Isrc
+    -Ilib/FreeRTOS-Kernel
+    -Ilib/FreeRTOS-Kernel/portable/GCC/ARM_CM4F
+    -Ilib/glm
