--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,7 @@ enable_testing()
 
 add_executable(tests
     algo/iir.test.cpp
+    math/vector.test.cpp
 )
 
 target_link_libraries(tests PRIVATE Catch2::Catch2WithMain emblib)
