--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,6 +5,8 @@ enable_testing()
 add_executable(tests
     algo/iir.test.cpp
     math/vector.test.cpp
+    rtos/queue.test.cpp
+    rtos/mutex.test.cpp
 )
 
 target_link_libraries(tests PRIVATE Catch2::Catch2WithMain emblib)
