reworked vector and quaternion

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,9 +3,9 @@ message(STATUS "Setting up tests")
 enable_testing()
 
 add_executable(tests
-    algo/iir.test.cpp
     math/matrix.test.cpp
-    # math/vector.test.cpp
+    math/vector.test.cpp
+    math/quaternion.test.cpp
     rtos/queue.test.cpp
     rtos/mutex.test.cpp
 )
