added kalman filter

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,6 +3,7 @@ message(STATUS "Setting up tests")
 enable_testing()
 
 add_executable(tests
+    dsp/kalman.test.cpp
     math/matrix.test.cpp
     math/vector.test.cpp
     math/quaternion.test.cpp
