adder iir tf2 implementation and vector now has a default constructor to all zeros

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,7 @@ enable_testing()
 
 add_executable(tests
     dsp/kalman.test.cpp
+    dsp/iir.test.cpp
     math/matrix.test.cpp
     math/vector.test.cpp
     math/quaternion.test.cpp
