added test for io

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(tests
     dsp/kalman.test.cpp
     dsp/iir.test.cpp
     dsp/pid.test.cpp
+    io/stdio_dev.test.cpp
     math/matrix.test.cpp
     math/vector.test.cpp
     math/quaternion.test.cpp
